<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            style="@style/MyCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name" />

        <Button
            android:id="@+id/insert"
            style="@style/MyCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert" />


        <Button
            android:id="@+id/fetch"
            style="@style/MyCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch" />


        <Button
            android:id="@+id/delete"
            style="@style/MyCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/update"
            style="@style/MyCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />


        <TextView
            android:id="@+id/data"
            style="@style/MyCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sd" />


    </LinearLayout>

</LinearLayout>
